# media2md-player

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  _debug_line.txt  build.py  pyproject.toml
.github/: ISSUE_TEMPLATE.md
data/sample/: sample.srt  sample.vtt
gui/: __main__.py  batch_tab.py  main_window.py
media2md/: __init__.py
media2md/cli/: main.py
media2md/models/: __init__.py  guide.py  transcript.py
media2md/pipeline/: __init__.py  batcher.py  corrector.py  exporter.py  extractor.py  guide_generator.py  orchestrator.py  setup.py  transcriber.py
media2md/utils/: config.py  subtitle_parser.py  timestamp.py
output/: sample_transcript.md
tests/: test_transcriber.py
